--- a/Reportit-FE/index.html
+++ b/Reportit-FE/index.html
@@ -58,7 +58,7 @@
             <div class="container">
                     <div class="col-sm-12">
                         <div class="page-caption">
-                            <h1 class="page-title">Welcome to ReportIT Be Safe</h1>
+                            <h1 class="page-title">Welcome to ReportIT </h1>
                             <img id="logoImg dot" src="Images/logo.png" alt="logo" >
                         </div>
                        
