--- a/Reportit-FE/index.html
+++ b/Reportit-FE/index.html
@@ -39,13 +39,13 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav mr-auto col-sm-3 col-md-3">
                 <li class="nav-item link">
-                    <a class="nav-link" href="index.html"><i class="fa fa-home fa-2x" aria-hidden="true"></i></a>
+                    <a class="nav-link" href="index.html"><i class="fa fa-home fa-2x" aria-hidden="true"> Home</i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="mailto:contact@reportit.com"><i class="fa fa-envelope fa-2x"></i></a>
+                    <a class="nav-link" href="mailto:contact@reportit.com"><i class="fa fa-envelope fa-2x">Mail</i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Includes/FAQ.htm"><i class="fa fa-question fa-2x"></i></a>
+                    <a class="nav-link" href="Includes/FAQ.htm"><i class="fa fa-question fa-2x"></i>FAQ</a>
                 </li>
             </ul>
         </div>
