--- a/Reportit-FE/index.html
+++ b/Reportit-FE/index.html
@@ -27,6 +27,8 @@
     </script>
     <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css' rel='stylesheet' />
     <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed" rel="stylesheet">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
 </head>
 
 <body>
@@ -69,7 +71,7 @@
 
     <!-- content -->
 
-    <div class="col-sm-12 ">
+    <div class="col-sm-12 " style="background-color:#0E1D70;">
         <label for="file-input" class="intro-banner-vdo-play-btn pinkBg">
             <i class="glyphicon glyphicon-play whiteText" aria-hidden="true"></i>
             <span class="ripple pinkBg"></span>
@@ -77,8 +79,20 @@
             <span class="ripple pinkBg"></span>
             <div class="inv-upload">
                 <input id="file-input" type="file" capture="camera" accept="image/gif, image/jpeg, image/png"
-                    oninput="confirmMsg()" />
+                 />
             </div>
+            <script>
+              $('#file-input').click(function(){
+                swal({
+                        Title:"confirmation",
+                        text: "Your Report has been submitted and send",
+                        buttons:{
+                        Return:true
+                        }
+
+                 });
+            }); 
+            </script>
         </label>
     </div>
 
@@ -87,50 +101,54 @@
     <!--The div element for the map -->
     <div id="map"></div>
     <script>
-      var map, infoWindow;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 15
-        });
-        infoWindow = new google.maps.InfoWindow;
-        if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function(position) {
-            var pos = {
-              lat: position.coords.latitude,
-              lng: position.coords.longitude
-            };
-            infoWindow.setPosition(pos);
-            infoWindow.setContent('ReportIt Location');
-            infoWindow.open(map);
-            map.setCenter(pos);
-          }, function() {
-            handleLocationError(true, infoWindow, map.getCenter());
-          });
-        } else {
-          // Browser doesn't support Geolocation
-          handleLocationError(false, infoWindow, map.getCenter());
+        var map, infoWindow;
+
+        function initMap() {
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: {
+                    lat: -34.397,
+                    lng: 150.644
+                },
+                zoom: 16
+            });
+            infoWindow = new google.maps.InfoWindow;
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(function (position) {
+                    var pos = {
+                        lat: position.coords.latitude,
+                        lng: position.coords.longitude
+                    };
+                    infoWindow.setPosition(pos);
+                    infoWindow.setContent('&nbsp &nbsp &nbsp ReportIt Location ');
+                    infoWindow.open(map);
+                    map.setCenter(pos);
+                }, function () {
+                    handleLocationError(true, infoWindow, map.getCenter());
+                });
+            } else {
+                // Browser doesn't support Geolocation
+                handleLocationError(false, infoWindow, map.getCenter());
+            }
         }
-      }
-      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-        infoWindow.setPosition(pos);
-        infoWindow.setContent(browserHasGeolocation ?
-                              'Error: The Geolocation service failed.' :
-                              'Error: Your browser doesn\'t support geolocation.');
-        infoWindow.open(map);
-      }
+
+        function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+            infoWindow.setPosition(pos);
+            infoWindow.setContent(browserHasGeolocation ?
+                'Error: The Geolocation service failed.' :
+                'Error: Your browser doesn\'t support geolocation.');
+            infoWindow.open(map);
+        }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIEJdFa483vyt3OjA7_7KKJSeigyBIJnk&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIEJdFa483vyt3OjA7_7KKJSeigyBIJnk&callback=initMap">
     </script>
-    
+
     <!-- Modal HTML Markup -->
     <div id="ModalLoginForm" class="modal fade">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title center">Just one more step and you're done!</h1>
-
+                    <h1 class="modal-title center">For further status about your report</h1>
                 </div>
                 <img class="center" src="Images/reporticon.png" alt="reporticon" height="42" width="42" />
                 <div class="modal-body">
@@ -175,6 +193,7 @@
     <button type="button" id="hide" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#ModalLoginForm">
         Click here to continue to the form
     </button>
+
     <!-- footer -->
     <footer>
         <div class="row ncolor">
