--- a/Reportit-FE/index.html
+++ b/Reportit-FE/index.html
@@ -67,10 +67,8 @@
 
         </div>
     </div>
-    <!-- end header -->
 
-    <!-- content -->
-
+    <!-- ReportIt Signal -->
     <div class="col-sm-12 " style="background-color:#0E1D70;">
         <label for="file-input" class="intro-banner-vdo-play-btn pinkBg">
             <i class="glyphicon glyphicon-play whiteText" aria-hidden="true"></i>
@@ -78,73 +76,19 @@
             <span class="ripple pinkBg"></span>
             <span class="ripple pinkBg"></span>
             <div class="inv-upload">
-                <input id="file-input" type="file" capture="camera" accept="image/gif, image/jpeg, image/png"
-                 />
+                <input id="file-input" type="file" capture="camera" accept="image/jpeg, image/png" data-toggle="modal" data-target="#ModalForm"/>
             </div>
-            <script>
-              $('#file-input').click(function(){
-                swal({
-                        Title:"confirmation",
-                        text: "Your Report has been submitted and send",
-                        buttons:{
-                        Return:true
-                        }
 
-                 });
-            }); 
-            </script>
         </label>
     </div>
-
-    <!-- content Map -->
-
-    <!--The div element for the map -->
+    <!-- end header -->
+    <!--Google map -->
     <div id="map"></div>
-    <script>
-        var map, infoWindow;
-
-        function initMap() {
-            map = new google.maps.Map(document.getElementById('map'), {
-                center: {
-                    lat: -34.397,
-                    lng: 150.644
-                },
-                zoom: 16
-            });
-            infoWindow = new google.maps.InfoWindow;
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(function (position) {
-                    var pos = {
-                        lat: position.coords.latitude,
-                        lng: position.coords.longitude
-                    };
-                    infoWindow.setPosition(pos);
-                    infoWindow.setContent('&nbsp &nbsp &nbsp ReportIt Location ');
-                    infoWindow.open(map);
-                    map.setCenter(pos);
-                }, function () {
-                    handleLocationError(true, infoWindow, map.getCenter());
-                });
-            } else {
-                // Browser doesn't support Geolocation
-                handleLocationError(false, infoWindow, map.getCenter());
-            }
-        }
-
-        function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-            infoWindow.setPosition(pos);
-            infoWindow.setContent(browserHasGeolocation ?
-                'Error: The Geolocation service failed.' :
-                'Error: Your browser doesn\'t support geolocation.');
-            infoWindow.open(map);
-        }
-    </script>
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIEJdFa483vyt3OjA7_7KKJSeigyBIJnk&callback=initMap">
-    </script>
-
-    <!-- Modal HTML Markup -->
-    <div id="ModalLoginForm" class="modal fade">
+    <script src="JS/Map.js"></script> 
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIEJdFa483vyt3OjA7_7KKJSeigyBIJnk&callback=initMap"></script>
+    <!--End Google map -->
+    <!--Toggle form -->
+    <div id="ModalForm" class="modal fade">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -152,12 +96,12 @@
                 </div>
                 <img class="center" src="Images/reporticon.png" alt="reporticon" height="42" width="42" />
                 <div class="modal-body">
-                    <form role="form" method="POST" action="">
+                    <form id="reportForm">
                         <input type="hidden" name="_token" value="">
                         <div class="form-group">
-                            <label class="control-label">Your name</label>
+                            <label class="control-label">Full name</label>
                             <div>
-                                <input type="text" class="form-control input-lg" name="name" value="">
+                                <input type="text" class="form-control input-lg" name="name" id="reporterName">
                             </div>
                         </div>
                         <div class="form-group">
@@ -167,22 +111,15 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label">Your phone</label>
+                            <label class="control-label">Phone Number</label>
                             <div>
                                 <input type="tel" class="form-control input-lg" name="phone">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label">Your city</label>
                             <div>
-                                <input type="text" class="form-control input-lg" name="city">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div>
-                                <button type="submit" class="btn btn-info">Send your report!</button>
-
-
+                                <button type="submit" class="btn btn-info" id="sendBtn">Send your report!</button>
+                                <button type="Cancel" class="btn btn-info" id="cancelBtn">Cancel</button>
                             </div>
                         </div>
                     </form>
@@ -190,26 +127,20 @@
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
-    <button type="button" id="hide" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#ModalLoginForm">
-        Click here to continue to the form
-    </button>
-
+     <!-- End Toggle form -->
     <!-- footer -->
     <footer>
         <div class="row ncolor">
             <div class="col-md-12">
                 <a href="tel:03-6013601"><i class="fa fa-phone fa-4x" aria-hidden="true"></i></a>
-                <button class="info" onclick="myFunction()"><img src="Images/info.png" height="50px"
+                <button class="info" onclick="myFunction()"><img src="Images/info 2.png" height="50px"
                         width="50px"></button>
             </div>
         </div>
     </footer>
     <script>
         function myFunction() {
-            alert(
-                "Our Team is dedicated to making the world a safer place with ReportIt an easy reporting system! Any citizen that uses the system understands the magic Behind it"
-            );
-        }
+            swal("💻Our Team💻", "Dedicated team for  making the world a safer place with ReportIt an easy reporting system!", "success")}
     </script>
 </body>
 
