--- a/Reportit-FE/index.html
+++ b/Reportit-FE/index.html
@@ -1,7 +1,6 @@
 <!--ReportIt--->
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>ReportIT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -28,6 +27,7 @@
     <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css' rel='stylesheet' />
     <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed" rel="stylesheet">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 
 </head>
 
@@ -78,7 +78,6 @@
             <div class="inv-upload">
                 <input id="file-input" type="file" capture="camera" accept="image/jpeg, image/png" data-toggle="modal" data-target="#ModalForm"/>
             </div>
-
         </label>
     </div>
     <!-- end header -->
