--- a/Reportit-FE/index.html
+++ b/Reportit-FE/index.html
@@ -106,24 +106,24 @@
                         <div class="form-group">
                             <label class="control-label">Full name</label>
                             <div>
-                                <input type="text" class="form-control input-lg" name="name" id="reporterName">
+                                <input type="text" pattern="[a-zA-Z\s]{1,20}" class="form-control input-lg" name="name" id="reporterName">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label">Email adress</label>
                             <div>
-                                <input type="email" class="form-control input-lg" name="Email">
+                                <input type="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$" class="form-control input-lg" name="Email">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label">Phone Number</label>
                             <div>
-                                <input type="tel" class="form-control input-lg" name="phone">
+                                <input type="tel"  pattern="[0-9]{10}" class="form-control input-lg" name="phone">
                             </div>
                         </div>
                         <div class="form-group">
                             <div>
-                                <button type="submit" class="btn btn-info" id="sendBtn">Send your report!</button>
+                                <button type="submit" class="btn btn-info" id="Btn">Send your report!</button>
                                 <button type="Cancel" class="btn btn-info" id="cancelBtn" formnovalidate>Cancel</button>
                             </div>
                         </div>
