--- a/Reportit-FE/index.html
+++ b/Reportit-FE/index.html
@@ -27,8 +27,6 @@
     <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css' rel='stylesheet' />
     <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed" rel="stylesheet">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-
 </head>
 
 <body>
@@ -83,7 +81,7 @@
     <!-- end header -->
     <!--Google map -->
     <div id="map"></div>
-    <script src="JS/Map.js"></script> 
+    <script src="JS/script.js"></script> 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIEJdFa483vyt3OjA7_7KKJSeigyBIJnk&callback=initMap"></script>
     <!--End Google map -->
     <!--Toggle form -->
@@ -95,35 +93,35 @@
                 </div>
                 <img class="center" src="Images/reporticon.png" alt="reporticon" height="42" width="42" />
                 <div class="modal-body">
-                    <form id="reportForm">
+                    <form id="reportForm" onsubmit='return onSubmit(this)'>
                         <input type="hidden" name="_token" value="">
                         <div class="form-group">
                             <label class="control-label">Upload Picture</label>
                             <div>
-                                <input id="file-input" type="file" name="MAX_FILE_SIZE" value="150000" capture="camera" accept="image/jpeg, image/png" size="20" required />
+                                <input id="file-input" type="file" capture="camera" accept="image/jpeg, image/png" name="Pic" required />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label">Full name</label>
                             <div>
-                                <input type="text" pattern="[a-zA-Z\s]{1,20}" class="form-control input-lg" name="name" id="reporterName">
+                                <input type="text" pattern="[a-zA-Z\s]{1,20}" class="form-control input-lg" name="Reporter Name">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label">Email adress</label>
                             <div>
-                                <input type="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$" class="form-control input-lg" name="Email">
+                                <input type="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$" class="form-control input-lg" name="Email Adress">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label">Phone Number</label>
                             <div>
-                                <input type="tel"  pattern="[0-9]{10}" class="form-control input-lg" name="phone">
+                                <input type="tel"  pattern="[0-9]{10}" class="form-control input-lg" name="Phone Number">
                             </div>
                         </div>
                         <div class="form-group">
                             <div>
-                                <button type="submit" class="btn btn-info" id="Btn">Send your report!</button>
+                                <button type="submit" class="btn btn-info" id="btn">Send your report!</button>
                                 <button type="Cancel" class="btn btn-info" id="cancelBtn" formnovalidate>Cancel</button>
                             </div>
                         </div>
