--- a/Reportit-FE/index.html
+++ b/Reportit-FE/index.html
@@ -27,6 +27,7 @@
     <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css' rel='stylesheet' />
     <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed" rel="stylesheet">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -98,7 +99,25 @@
                         <div class="form-group">
                             <label class="control-label">Upload Picture</label>
                             <div>
-                                <input id="file-input" type="file" capture="camera" accept="image/jpeg, image/png" name="Pic" required />
+                                <input id="myFile" type="file" capture="camera" accept="image/jpeg, image/png" name="myFile" required />
+                                <script type="text/javascript">
+                                    $().ready(function () {
+                                        $('[type="file"]').change(function () {
+                                            var fileInput = $(this);
+                                            if (fileInput.length && fileInput[0].files && fileInput[0]
+                                                .files.length) {
+                                                var url = window.URL || window.webkitURL;
+                                                var image = new Image();
+                                                image.onerror = function () {
+                                                    alert('Invalid image');
+                                                    document.getElementById('myFile').value="";
+
+                                                };
+                                                image.src = url.createObjectURL(fileInput[0].files[0]);
+                                            }
+                                        });
+                                    });
+                                </script>
                             </div>
                         </div>
                         <div class="form-group">
