--- a/Reportit-FE/index.html
+++ b/Reportit-FE/index.html
@@ -28,6 +28,7 @@
     <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed" rel="stylesheet">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    
 </head>
 
 <body>
@@ -99,25 +100,8 @@
                         <div class="form-group">
                             <label class="control-label">Upload Picture</label>
                             <div>
-                                <input id="myFile" type="file" capture="camera" accept="image/jpeg, image/png" name="myFile" required />
-                                <script type="text/javascript">
-                                    $().ready(function () {
-                                        $('[type="file"]').change(function () {
-                                            var fileInput = $(this);
-                                            if (fileInput.length && fileInput[0].files && fileInput[0]
-                                                .files.length) {
-                                                var url = window.URL || window.webkitURL;
-                                                var image = new Image();
-                                                image.onerror = function () {
-                                                    alert('Invalid image');
-                                                    document.getElementById('myFile').value="";
+                                <input id="myFile" type="file" capture="camera" accept="image/jpeg, image/png" name="myFile" onchange="ValidateSingleInput(this);" required />
 
-                                                };
-                                                image.src = url.createObjectURL(fileInput[0].files[0]);
-                                            }
-                                        });
-                                    });
-                                </script>
                             </div>
                         </div>
                         <div class="form-group">
@@ -140,9 +124,13 @@
                         </div>
                         <div class="form-group">
                             <div>
+
                                 <button type="submit" class="btn btn-info" id="btn">Send your report!</button>
                                 <button type="Cancel" class="btn btn-info" id="cancelBtn" formnovalidate>Cancel</button>
                             </div>
+                        </div>
+                        <div id="myProgress">
+                                <div id="myBar"></div>
                         </div>
                     </form>
                 </div>
