--- a/Reportit-FE/index.html
+++ b/Reportit-FE/index.html
@@ -30,22 +30,22 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 
-<body>
+<body id="fonti">
     <!-- menu navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark ncolor">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav mr-auto col-sm-3 col-md-3">
-                <li class="nav-item link">
-                    <a class="nav-link" href="index.html"><i class="fa fa-home fa-2x" aria-hidden="true"> Home</i></a>
+        <div class="collapse navbar-collapse " id="collapsibleNavbar">
+            <ul class="navbar-nav mr-auto col-sm-3 col-md-3 ">
+                <li class="nav-item ">
+                    <a class="nav-link " href="index.html"><i class="fa fa-home fa-2x " aria-hidden="true"> Home</i></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="mailto:contact@reportit.com"><i class="fa fa-envelope fa-2x"> Mail</i></a>
+                <li class="nav-item ">
+                    <a class="nav-link " href="mailto:contact@reportit.com"><i class="fa fa-envelope fa-2x"> Mail</i></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item ">
                     <a class="nav-link" href="Includes/FAQ.htm"><i class="fa fa-question fa-2x"> FAQ</i></a>
                 </li>
             </ul>
@@ -109,7 +109,7 @@
                                                 var url = window.URL || window.webkitURL;
                                                 var image = new Image();
                                                 image.onerror = function () {
-                                                    alert('Invalid image');
+                                                    alert('You must insert a JPEG or PNG picture type!');
                                                     document.getElementById('myFile').value="";
 
                                                 };
@@ -160,10 +160,7 @@
             </div>
         </div>
     </footer>
-    <script>
-        function myFunction() {
-            swal("💻Our Team💻", "Dedicated to making the world a safer place. ReportIt - an easy reporting system!", "success")}
-    </script>
+
 </body>
 
 </html>
