--- a/Reportit-FE/index.html
+++ b/Reportit-FE/index.html
@@ -100,7 +100,6 @@
                         <div class="form-group">
                             <label class="control-label">Upload Picture</label>
                             <div>
-<<<<<<< HEAD
                                 <input id="myFile" type="file" capture="camera" accept="image/jpeg, image/png" name="myFile" required />
                                 <script type="text/javascript">
                                     $().ready(function () {
@@ -113,12 +112,16 @@
                                                 image.onerror = function () {
                                                     alert('You must insert a JPEG or PNG picture type!');
                                                     document.getElementById('myFile').value="";
-=======
-                                <input id="myFile" type="file" capture="camera" accept="image/jpeg, image/png" name="myFile" onchange="ValidateSingleInput(this);" required />
->>>>>>> 43d1e6aacca5bc60767f1a484886250f361f4944
 
+                                                };
+                                                image.src = url.createObjectURL(fileInput[0].files[0]);
+                                            }
+                                        });
+                                    });
+                                </script>
                             </div>
                         </div>
+              
                         <div class="form-group">
                             <label class="control-label">Full name</label>
                             <div>
