--- a/Reportit-FE/index.html
+++ b/Reportit-FE/index.html
@@ -28,7 +28,6 @@
     <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed" rel="stylesheet">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    
 </head>
 
 <body id="fonti">
@@ -37,7 +36,6 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse " id="collapsibleNavbar">
             <ul class="navbar-nav mr-auto col-sm-3 col-md-3 ">
                 <li class="nav-item ">
@@ -62,12 +60,9 @@
                     <h1 class="page-title">Welcome to ReportIT </h1>
                     <img id="logoImg dot" src="Images/logo.png" alt="logo">
                 </div>
-
             </div>
-
         </div>
     </div>
-
     <!-- ReportIt Signal -->
     <div class="col-sm-12 " style="background-color:#0E1D70;">
         <label for="file-input" class="intro-banner-vdo-play-btn pinkBg">
@@ -95,38 +90,36 @@
                 </div>
                 <img class="center" src="Images/reporticon.png" alt="reporticon" height="42" width="42" />
                 <div class="modal-body">
-                    <form id="reportForm" method="post" enctype="multipart/form-data" >
+                    <form action="https://report-it.herokuapp.com/reports/create" method="post" enctype="multipart/form-data" id="reportForm">
                         <input type="hidden" name="_token" value="">
                         <div class="form-group">
                             <label class="control-label"><b>Upload Picture</b></label>
                             <div>
-                                <input id="myFile" type="file" capture="camera" accept="image/jpeg, image/png" name="reportpicture" required />
+                                <input id="File" type="file" capture="camera" accept="image/jpeg, image/png" name="reportpicture" required />
                             </div>
                         </div>
-              
                         <div class="form-group">
                             <label class="control-label">Full name</label>
                             <div>
-                                <input type="text" pattern="[a-zA-Z\s]{1,20}" class="form-control input-lg" name="Reporter Name">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label">Email adress</label>
-                            <div>
-                                <input type="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$" class="form-control input-lg" name="Email Adress">
+                                <input type="text" pattern="[a-zA-Z\s]{1,20}" class="form-control input-lg" name="reporterName">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label">Phone Number</label>
                             <div>
-                                <input type="tel"  pattern="[0-9]{10}" class="form-control input-lg" name="Phone Number">
+                                <input type="tel"  pattern="[0-9]{10}" class="form-control input-lg" name="reporterPhone">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label">Email adress</label>
+                            <div>
+                                <input type="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$" class="form-control input-lg" name="reporterEmail">
                             </div>
                         </div>
                         <input type="hidden" id="lat" name="lat"/>
                         <input type="hidden" id="lng" name="lng"/>
                         <div class="form-group">
                             <div>
-
                                 <button type="submit" class="btn btn-info" id="btn">Send your report!</button>
                                 <button type="Cancel" class="btn btn-info" id="cancelBtn" formnovalidate>Cancel</button>
                             </div>
@@ -142,12 +135,9 @@
         <div class="row ncolor">
             <div class="col-md-12">
                 <a href="tel:03-6013601"><i class="fa fa-phone fa-4x" aria-hidden="true"></i></a>
-                <button class="info" onclick="myFunction()"><img src="Images/info 2.png" height="50px"
-                        width="50px"></button>
+                <button class="info" onclick="myFunction()"><img src="Images/info 2.png" height="50px" width="50px"></button>
             </div>
         </div>
     </footer>
-
 </body>
-
 </html>
