--- a/Reportit-FE/index.html
+++ b/Reportit-FE/index.html
@@ -135,7 +135,7 @@
                         <div class="form-group">
                             <div>
                                 <button type="submit" class="btn btn-info" id="button">Submit</button>
-                                <button type="button" class="btn btn-info" id="buttonC">Cencel</button>
+                                <button type="button" class="btn btn-info" id="buttonC">cancel</button>
                             </div>
                         </div>
                     </form>
