--- a/Reportit-FE/index.html
+++ b/Reportit-FE/index.html
@@ -134,8 +134,9 @@
                         <input type="hidden" id="longitude" name="longitude" />
                         <div class="form-group">
                             <div>
-                                <button type="submit" class="btn btn-info" id="button">Submit</button>
-                                <button type="button" class="btn btn-info" id="buttonC">cancel</button>
+                                <button type="submit" class="btn btn-success" id="btn">Submit</button>
+                                <button type="Cancel" class="btn btn-danger" id="cancelBtn" formnovalidate>Cancel</button>
+
                             </div>
                         </div>
                     </form>
