--- a/Reportit-FE/index.html
+++ b/Reportit-FE/index.html
@@ -42,14 +42,14 @@
         <div class="collapse navbar-collapse " id="collapsibleNavbar">
             <ul class="navbar-nav mr-auto col-sm-3 col-md-3 ">
                 <li class="nav-item ">
-                    <a class="nav-link " href="index.html"><i class="fa fa-home fa-2x " aria-hidden="true"> Home</i></a>
+                    <a class="nav-link " href="index.html"><i class="fa fa-home fa-4x " aria-hidden="true"> Home</i></a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link " href="mailto:contact@reportit.com"><i class="fa fa-envelope fa-2x ">
+                    <a class="nav-link " href="mailto:contact@reportit.com"><i class="fa fa-envelope fa-4x ">
                             Contact</i></a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="Includes/FAQ.htm"><i class="fa fa-question fa-2x"> FAQ</i></a>
+                    <a class="nav-link" href="Includes/FAQ.htm"><i class="fa fa-question fa-4x"> FAQ</i></a>
                 </li>
             </ul>
         </div>
@@ -104,8 +104,7 @@
                             <label class="control-label"><b>Upload Picture</b></label>
                             <div  class="custom-file mb-2">
                                 <input type="file" id="File" class="custom-file-input" capture="camera" accept="image/jpeg, image/png" name="reportpicture" required>
-                                <label class="custom-file-label" for="customFile">Choose file</label>
-
+                                <label class="custom-file-label"  id="FileL" for="customFile">Choose file</label>
                             </div>
                         </div>
                         <div class="form-group">
@@ -134,9 +133,8 @@
                         <input type="hidden" id="longitude" name="longitude" />
                         <div class="form-group">
                             <div>
-                                <button type="submit" class="btn btn-success" id="btn">Submit</button>
-                                <button type="Cancel" class="btn btn-danger" id="cancelBtn" formnovalidate>Cancel</button>
-
+                                <button type="submit" class="btn btn-success" id="button">Submit</button>
+                                <button type="Cancel" class="btn btn-danger" id="buttonC" formnovalidate>Cancel</button>
                             </div>
                         </div>
                     </form>
