--- a/Reportit-FE/index.html
+++ b/Reportit-FE/index.html
@@ -134,7 +134,7 @@
                         <div class="form-group">
                             <div>
                                 <button type="submit" class="btn btn-success" id="button">Submit</button>
-                                <button type="Cancel" class="btn btn-danger" id="buttonC" formnovalidate>Cancel</button>
+                                <button type="button" class="btn btn-info" id="buttonC">Cancel</button>
                             </div>
                         </div>
                     </form>
