--- a/Reportit-FE/index.html
+++ b/Reportit-FE/index.html
@@ -114,7 +114,7 @@
     <div id="map"></div>
     <script src="JS/script.js"></script>
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIEJdFa483vyt3OjA7_7KKJSeigyBIJnk&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=********************&callback=initMap">
     </script>
     <!--End Google map -->
 
